; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_ossltest.c_ossltest_digests.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_ossltest.c_ossltest_digests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32**, i32**, i32)* @ossltest_digests to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ossltest_digests(i32* %0, i32** %1, i32** %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i32** %2, i32*** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 1, i32* %10, align 4
  %11 = load i32**, i32*** %7, align 8
  %12 = icmp ne i32** %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %4
  %14 = load i32**, i32*** %8, align 8
  %15 = call i32 @ossltest_digest_nids(i32** %14)
  store i32 %15, i32* %5, align 4
  br label %37

16:                                               ; preds = %4
  %17 = load i32, i32* %9, align 4
  switch i32 %17, label %33 [
    i32 132, label %18
    i32 131, label %21
    i32 130, label %24
    i32 129, label %27
    i32 128, label %30
  ]

18:                                               ; preds = %16
  %19 = call i32* (...) @digest_md5()
  %20 = load i32**, i32*** %7, align 8
  store i32* %19, i32** %20, align 8
  br label %35

21:                                               ; preds = %16
  %22 = call i32* (...) @digest_sha1()
  %23 = load i32**, i32*** %7, align 8
  store i32* %22, i32** %23, align 8
  br label %35

24:                                               ; preds = %16
  %25 = call i32* (...) @digest_sha256()
  %26 = load i32**, i32*** %7, align 8
  store i32* %25, i32** %26, align 8
  br label %35

27:                                               ; preds = %16
  %28 = call i32* (...) @digest_sha384()
  %29 = load i32**, i32*** %7, align 8
  store i32* %28, i32** %29, align 8
  br label %35

30:                                               ; preds = %16
  %31 = call i32* (...) @digest_sha512()
  %32 = load i32**, i32*** %7, align 8
  store i32* %31, i32** %32, align 8
  br label %35

33:                                               ; preds = %16
  store i32 0, i32* %10, align 4
  %34 = load i32**, i32*** %7, align 8
  store i32* null, i32** %34, align 8
  br label %35

35:                                               ; preds = %33, %30, %27, %24, %21, %18
  %36 = load i32, i32* %10, align 4
  store i32 %36, i32* %5, align 4
  br label %37

37:                                               ; preds = %35, %13
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i32 @ossltest_digest_nids(i32**) #1

declare dso_local i32* @digest_md5(...) #1

declare dso_local i32* @digest_sha1(...) #1

declare dso_local i32* @digest_sha256(...) #1

declare dso_local i32* @digest_sha384(...) #1

declare dso_local i32* @digest_sha512(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
